# homeassistant-intellistat

./: .gitignore  README.md  default.nix  hacs.json  pyproject.toml
.homeassistant/: configuration.yaml  docker-compose.yaml
custom_components/intellistat/: __init__.py  config_flow.py  const.py  manifest.json  strings.json  switch.py  util.py
custom_components/intellistat/cli/: __init__.py
custom_components/intellistat/translations/: en.json
