[tool.poetry]
name = "homeassistant-intellistat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
homeassistant = "^2024.12.5"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
setup = 'custom_components.intellistat.cli:setup'
dev = 'custom_components.intellistat.cli:dev'